For details check git history.

devel branch:

v0.9.0.1:
	- Bcache bugfix: Use /proc/partitions instead of /sys/block/*.
	  The latter one does not lists partitons on top level.

v0.9:
	- softraid: don't poke kernel to auto detect v0.9 arrays.
	- Version bumps:
		busybox 1.20.0 -> 1.21.1
		cryptsetup 1.4.3 -> 1.6.3
		dropbear 2012.55 -> 2013.62
		libgcrypt 1.5.0 -> 1.6.0
		libgpg-error 1.10 -> 1.12
		lvm2 2.02.97 -> 2.02.103
		mdadm 3.2.5 -> 3.2.6
		zlib 1.2.7 -> 1.2.8
	- Check whatever root variable is empty on mounting /newroot phase.
	- Enable discards support for LVM and DM Crypt LUKS by default.
	- Drop luks_trim option.
	- Add luks_no_discards option.
	- Reorder network setup iproute2 calls.
	- Don't wait remaining time for sshd if we send resume-boot from remote
	  shell (Andrew Glinskiy)
	- Fix misprint (Andrew Glinskiy)
	- Move run early hooks before SetupNetwork to have the abillity to insert
	  any kernel modules because on init hooks we are not have busybox symlinks.
	  Also setup /dev before early hooks that we have a complete minimal
	  environment. And move rootdelay nerly root mount point.(Andrew Glinskiy)
	- Wait for sshd connection only if rescueshell have never occur (Andrew Glinskiy)
	- Add support of profile source priority, it's useful with multiple
	  initrds (Andrew Glinskiy)
	- Show running hooks (Andrew Glinskiy)
	- Lazy umount /dev/pts in case of ssh login inside initramfs.
	- Bcache support, now can boot with rootfs on bcache block device.

v0.8.0.1, 04-08-2013:
	- Pass $PATH env variable to $init.
	- Don't kill sshd until remote-rescueshell.lock is released.

v0.8, 03-08-2013:
	- get_sshd_keys target added to Makefile.
	- bootstrap-all target added to Makefile.
	- sshd_interface, sshd_ipv4 and sshd_ipv4_gateway variables were changed
	into binit_net_if, binit_net_addr and binit_net_gw.
	- SetupNetwork() function now take care of setting network up.
	- Hooks support, now you can include own code in init, early,